--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <center>
             <h1>
                 <hr>
-                HI i am Ishan Uprety
+                HI i am Ishan Uprety Check
                 <hr>
             </h1>
                     <a href="https://www.facebook.com/ishan.uprety.9"><img src="fb_logo.png" width="50" height="50">
