--- a/index.html
+++ b/index.html
@@ -41,8 +41,13 @@
     <script src="app.js"></script>
 
     <div class="aboutme">
-        <img class="myprofile" src="red.png" alt="avatar" >
-
+        <div class="myprofile">
+            <img class="photo" src="red.png" alt="avatar" >
+        </div>
+        
+        <div class="meText">
+        <p>Who's this guy?</p>
+        </div>       
     </div>
 
     <center>
