--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="para">
         <center>
-        <p>Dattebayo!!</p>
+        <p>Dattebayo!</p>
     </div>
         </center>
 
