--- a/index.html
+++ b/index.html
@@ -47,7 +47,36 @@
         
         <div class="meText">
         <p>Who's this guy?</p>
-        </div>       
+        </div> 
+        <div class="myinfo">
+            <p>
+                Hi there, I am a Creative Developer and Designer, I enjoy building
+                 beautiful and thoughtful experiences. I like to mix code surprising
+                  visuals and pleasing interactions. I take my work seriously but not
+                   myself.<br><br>
+
+                   I don’t like to define myself by the work I’ve done. I define myself 
+                   by the work I want to do. Skills can be taught, personality is inherent.
+                    I prefer to keep learning, continue challenging myself, and do interesting 
+                    things that matter.<br><br>
+
+
+                   Fueled by high energy levels and boundless enthusiasm, I’m easily inspired 
+                   and more then willing to follow my fascinations wherever 
+                   they take me. I’m passionate, expressive, multi-talented 
+                   spirit with a natural ability to entertain and inspire.
+                    I’m never satisfied to just come up with ideas. Instead 
+                    I have an almost impulsive need to act on them.<br><br>
+
+                    My abundant energy fuels me in the pursuit of many interests, hobbies, 
+                    areas of study and artistic endeavors. I’m a fast learner, able to pick 
+                    up new skills and juggle different projects and roles with 
+                    relative ease.
+
+
+
+            </p>
+        </div>      
     </div>
 
     <center>
