--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     <script src="app.js"></script>
 
     <div class="aboutme">
-        <div class="myprofile">
-            <img class="photo" src="red.png" alt="avatar" >
-        </div>
         
-        <div class="meText">
-        <p>Who's this guy?</p>
+            <img class="photo" src="red.png" alt="avatar" >
+   
+        
+            <div class="whoiswala">
+                <p>Who's this guy?</p>
         </div> 
         <div class="myinfo">
             <p>
