--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             
         
             <div class="whoiswala">
-                <p>Who's this guy?</p>
+                <p><u>Who's this guy?</u></p>
         </div> 
         <div class="myinfo">
             <p>
