--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
     <div class="intro_page">
         <center>
         <p><b>Hello, I'm <u><span style="color: deeppink;">Ishan Uprety</span></u>.</b></p>
+        <br>
+        <h1>I aim to be a Professional Ethical Hacker</h1>
     </center>
     
     </div>
-
+<!-- scripts 
     <div class="para">
         <center>
         <p>Dattebayo!</p>
@@ -56,7 +58,7 @@
         </center>
 
 </div>
-
+-->
 
     <!-- scripts -->
     <script src="particles.js"></script>
